# HTB_Writeups

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  dead-link.yml  new-author.yml  new-skill.yml
.github/workflows/: lighthouse.config.json  lighthouse.yml  refresh.yml
cloudflare-worker/: README.md  worker.js  wrangler.toml
data/: changelog.json  machines.json  seed_machines.json  skills_glossary.json  summaries.json
docs/: 404.mdx  all.mdx  cambios.mdx  cobertura-autores.mdx  como-usar.mdx  creditos.mdx  docs.json  feed.xml  introduction.mdx  package-lock.json  package.json  random.mdx  recientes.mdx  roadmap-oscp.mdx  sobre.mdx
docs/en/: 404.mdx  about.mdx  all.mdx  cambios.mdx  cobertura-autores.mdx  credits.mdx  how-to-use.mdx  introduction.mdx  random.mdx  recientes.mdx  roadmap-oscp.mdx
docs/logo/: custom.css  custom.js  site.webmanifest
docs/machines/linux/dificil/: admirertoo.mdx  altered.mdx  charon.mdx  crimestoppers.mdx  dab.mdx  earlyaccess.mdx  ellingson.mdx  falafel.mdx  feline.mdx  flujab.mdx  holiday.mdx  index.mdx  joker.mdx  kotarak.mdx  mischief.mdx  monitors.mdx  oouch.mdx  overflow.mdx  overgraph.mdx  oz.mdx  phoenix.mdx  player.mdx  pressed.mdx  quick.mdx  scavenger.mdx  (+8 more)
docs/screenshots/: README.md
scripts/: cache.py  changelog.py  config.py  enrich.py  fetch_machines.py  find_skills.py  find_writeups.py  generate_mdx.py  pipeline.py  track_changes.py  validate_links.py
tests/: test_fetch_machines.py  test_generate_mdx.py
(+389 files in other folders)
